--- a/#src/pug/partials/section-project.pug
+++ b/#src/pug/partials/section-project.pug
@@ -1,52 +1,184 @@
 .project-page.el-anime 
 	._row
-		.page-project._column 
-			._image 
-				img(src="@@webRoot/img/project/project-1.png", alt="project-1")
-				span
-					+iconfont("html-five")
+		.card-project._column 
+			._body 
+				._image 
+					img(src="@@webRoot/img/project/project-1.png", alt="project-1")
+					span
+						+iconfont("html-five")
+						+iconfont("css3")
 				._text 
-					| Сайт интернет магазина “шаблон”
+					| Веб-Сайт - “шаблон”
 				._button 
 					a(href="https://dennchik.github.io/coronaWebsite/build/" target="_blank") view-project 
-		.page-project._column 
-			._image
-				img(src="@@webRoot/img/project/project-2.png", alt="project-1")
-				span
-					+iconfont("css3")
-					+iconfont("javascript")
-					+iconfont("gulp")
+			.languages
+				h2._title Languages
+				._progress 
+					span._progress-value
+					span._progress-value
+					span._progress-value 
+					span._progress-value 
+				._list-style
+					li.d-inline
+						._inline-flex
+							svg._octicon-dot(style="color:#c6538c;", aria-hidden="true", height="16", viewBox="0 0 16 16", version="1.1", width="16", data-view-component="true")
+								path(d="M8 4a4 4 0 1 1 0 8 4 4 0 0 1 0-8Z")
+							span._text SCSS
+							span._value 59.6% 
+					li.d-inline
+						._inline-flex
+							svg._octicon-dot(style="color:#563d7c;", aria-hidden="true", height="16", viewBox="0 0 16 16", version="1.1", width="16", data-view-component="true")
+								path(d="M8 4a4 4 0 1 1 0 8 4 4 0 0 1 0-8Z")
+							span._text CSS
+							span._value 17.2% 
+					li.d-inline
+						._inline-flex
+							svg._octicon-dot(style="color:#e34c26;", aria-hidden="true", height="16", viewBox="0 0 16 16", version="1.1", width="16", data-view-component="true")
+								path(d="M8 4a4 4 0 1 1 0 8 4 4 0 0 1 0-8Z")
+							span._text HTML
+							span._value 13.6% 
+					li.d-inline
+						._inline-flex
+							svg._octicon-dot(style="color:#f1e05a;", aria-hidden="true", height="16", viewBox="0 0 16 16", version="1.1", width="16", data-view-component="true")
+								path(d="M8 4a4 4 0 1 1 0 8 4 4 0 0 1 0-8Z")
+							span._text JavaScrip
+							span._value 9.6% 
+		.card-project._column 
+			._body 
+				._image
+					img(src="@@webRoot/img/project/project-2.png", alt="project-1")
+					span
+						+iconfont("html-five")
+						+iconfont("css3")
+						+iconfont("java-script")
+						+iconfont("gulp")
 				._text 
-						| Веб-сайт финансовой организации
+						| Сайт интернет магазина “шаблон” 
 				._button 
 					a(href="https://dennchik.github.io/Relvise/build/" target="_blank") view-project 
-		.page-project._column 
-			._image
-				img(src="@@webRoot/img/project/project-3.png", alt="project-1")
-				span 
-					+iconfont("css3")
-					+iconfont("javascript")
-					+iconfont("react")
-					+iconfont("gulp")
+			.languages
+				h2._title Languages
+				._progress 
+					span._progress-value
+					span._progress-value
+					span._progress-value  
+				._list-style
+					li.d-inline
+						._inline-flex
+							svg._octicon-dot(style="color:#e34c26;", aria-hidden="true", height="16", viewBox="0 0 16 16", version="1.1", width="16", data-view-component="true")
+								path(d="M8 4a4 4 0 1 1 0 8 4 4 0 0 1 0-8Z")
+							span._text HTML
+							span._value 61.5% 
+					li.d-inline
+						._inline-flex
+							svg._octicon-dot(style="color:#c6538c;", aria-hidden="true", height="16", viewBox="0 0 16 16", version="1.1", width="16", data-view-component="true")
+								path(d="M8 4a4 4 0 1 1 0 8 4 4 0 0 1 0-8Z")
+							span._text SCSS
+							span._value 32.6% 
+					li.d-inline
+						._inline-flex
+							svg._octicon-dot(style="color:#f1e05a;", aria-hidden="true", height="16", viewBox="0 0 16 16", version="1.1", width="16", data-view-component="true")
+								path(d="M8 4a4 4 0 1 1 0 8 4 4 0 0 1 0-8Z")
+							span._text JavaScrip
+							span._value 5.9% 
+		.card-project._column
+			._body 
+				._image
+					img(src="@@webRoot/img/project/project-3.png", alt="project-1")
+					span 
+						+iconfont("css3")
+						+iconfont("java-script")
+						+iconfont("pug")
+						+iconfont("gulp")
 				._text 
-					| Сайт интернет магазина “шаблон”
+					| Веб-сайт финансовой организации,Сайт интернет магазина “шаблон”
 				._button 
 					a(href="https://dennchik.github.io/Clear-fit/public/" target="_blank") view-project 
-
-
-//- 
-		.page-project._column 
-			._image
-				img(src="@@webRoot/img/project/project-3.png", alt="project-1")
-				span 
-					+iconfont("css3")
-					+iconfont("javascript")
-					+iconfont("react")
-					+iconfont("gulp")
+			.languages
+				h2._title Languages
+				._progress 
+					span._progress-value
+					span._progress-value
+					span._progress-value 
+					span._progress-value 
+				._list-style
+					li.d-inline
+						._inline-flex
+							svg._octicon-dot(style="color:#f1e05a;", aria-hidden="true", height="16", viewBox="0 0 16 16", version="1.1", width="16", data-view-component="true")
+								path(d="M8 4a4 4 0 1 1 0 8 4 4 0 0 1 0-8Z")
+							span._text JavaScrip
+							span._value 41.1% 
+					li.d-inline
+						._inline-flex
+							svg._octicon-dot(style="color:#563d7c;", aria-hidden="true", height="16", viewBox="0 0 16 16", version="1.1", width="16", data-view-component="true")
+								path(d="M8 4a4 4 0 1 1 0 8 4 4 0 0 1 0-8Z")
+							span._text CSS
+							span._value 30.3% 
+					li.d-inline
+						._inline-flex
+							svg._octicon-dot(style="color:#c6538c;", aria-hidden="true", height="16", viewBox="0 0 16 16", version="1.1", width="16", data-view-component="true")
+								path(d="M8 4a4 4 0 1 1 0 8 4 4 0 0 1 0-8Z")
+							span._text SCSS
+							span._value 23.7% 
+					li.d-inline
+						._inline-flex
+							svg._octicon-dot(style="color:#e34c26;", aria-hidden="true", height="16", viewBox="0 0 16 16", version="1.1", width="16", data-view-component="true")
+								path(d="M8 4a4 4 0 1 1 0 8 4 4 0 0 1 0-8Z")
+							span._text HTML
+							span._value 4.9% 
+		.card-project._column 
+			._body 
+				._image
+					img(src="@@webRoot/img/project/project-4.png", alt="project-1")
+					span 
+						+iconfont("css3")
+						+iconfont("java-script")
+						+iconfont("pug")
+						+iconfont("gulp")
 				._text 
-					| Сайт интернет магазина “шаблон”
+					| Работа для студии - "CreativeCult"
 				._button 
 					a(href="https://dennchik.github.io/Clear-fit/public/" target="_blank") view-project 
+			.languages
+				h2._title Languages
+				._progress 
+					span._progress-value
+					span._progress-value
+					span._progress-value 
+					span._progress-value
+					span._progress-value
+				._list-style
+					li.d-inline
+						._inline-flex
+							svg._octicon-dot(style="color:#c6538c;", aria-hidden="true", height="16", viewBox="0 0 16 16", version="1.1", width="16", data-view-component="true")
+								path(d="M8 4a4 4 0 1 1 0 8 4 4 0 0 1 0-8Z")
+							span._text SCSS
+							span._value 33.3% 
+					li.d-inline
+						._inline-flex
+							svg._octicon-dot(style="color:#563d7c;", aria-hidden="true", height="16", viewBox="0 0 16 16", version="1.1", width="16", data-view-component="true")
+								path(d="M8 4a4 4 0 1 1 0 8 4 4 0 0 1 0-8Z")
+							span._text CSS
+							span._value 32.5% 
+					li.d-inline
+						._inline-flex
+							svg._octicon-dot(style="color:#f1e05a;", aria-hidden="true", height="16", viewBox="0 0 16 16", version="1.1", width="16", data-view-component="true")
+								path(d="M8 4a4 4 0 1 1 0 8 4 4 0 0 1 0-8Z")
+							span._text JavaScrip
+							span._value 17.6% 
+					li.d-inline
+						._inline-flex
+							svg._octicon-dot(style="color:#e34c26;", aria-hidden="true", height="16", viewBox="0 0 16 16", version="1.1", width="16", data-view-component="true")
+								path(d="M8 4a4 4 0 1 1 0 8 4 4 0 0 1 0-8Z")
+							span._text HTML
+							span._value 9.1% 
+					li.d-inline
+						._inline-flex
+							svg._octicon-dot(style="color:#a86454", aria-hidden="true", height="16", viewBox="0 0 16 16", version="1.1", width="16", data-view-component="true")
+								path(d="M8 4a4 4 0 1 1 0 8 4 4 0 0 1 0-8Z")
+							span._text Pug
+							span._value 7.5%  
+//- 					
 		.page-project._column 
 			._image
 				img(src="@@webRoot/img/project/project-3.png", alt="project-1")
