--- a/#src/scss/core/_variables-icon.scss
+++ b/#src/scss/core/_variables-icon.scss
@@ -1,19 +1,24 @@
 $icon-font-family: 'icons-set' !default;
 $icon-font-path: '../fonts' !default;
 
-$icon-react: unquote('"\\e99a"');
-$icon-gulp: unquote('"\\e951"');
-$icon-javascript: unquote('"\\e952"');
-$icon-java: unquote('"\\e953"');
-$icon-vue-dot-js: unquote('"\\e954"');
-$icon-node-dot-js: unquote('"\\e955"');
+$icon-dzen: unquote('"\\e9a3"');
+$icon-instagram-squard: unquote('"\\e9a4"');
+$icon-pug: unquote('"\\e9a5"');
+$icon-gulp: unquote('"\\e956"');
+$icon-java-script: unquote('"\\e957"');
+$icon-java: unquote('"\\e958"');
+$icon-vue-dot-js: unquote('"\\e959"');
+$icon-node-js: unquote('"\\e95a"');
+$icon-react: unquote('"\\e99b"');
 $icon-money-bag: unquote('"\\e919"');
-$icon-document-file-java: unquote('"\\e956"');
-$icon-document-java: unquote('"\\e957"');
-$icon-file-java: unquote('"\\e958"');
-$icon-file-java-o: unquote('"\\e959"');
+$icon-document-file-java: unquote('"\\e95b"');
+$icon-document-java: unquote('"\\e95c"');
+$icon-file-java: unquote('"\\e95d"');
+$icon-file-java-o: unquote('"\\e95e"');
+$icon-instagram-circle: unquote('"\\e9a6"');
 $icon-dollar-money: unquote('"\\e91f"');
 $icon-dollars: unquote('"\\e91a"');
+$icon-recycle: unquote('"\\e905"');
 $icon-bug: unquote('"\\f188"');
 $icon-css3: unquote('"\\e900"');
 $icon-resistance: unquote('"\\e904"');
@@ -82,7 +87,7 @@ $icon-file-audio-o: unquote('"\\f1c7"');
 $icon-file-movie-o: unquote('"\\f1c8"');
 $icon-file-code-o: unquote('"\\f1c9"');
 $icon-book: unquote('"\\f02d"');
-$icon-fire-resistance: unquote('"\\e905"');
+$icon-fire-resistance: unquote('"\\e909"');
 $icon-cogs-gears: unquote('"\\e995"');
 $icon-cogs-gear: unquote('"\\f085"');
 $icon-cog-md: unquote('"\\f013"');
@@ -119,16 +124,16 @@ $icon-power-off: unquote('"\\f011"');
 $icon-signal: unquote('"\\f012"');
 $icon-currency-dollar: unquote('"\\e918"');
 $icon-coin-dollar: unquote('"\\e940"');
+$icon-git-hub-square: unquote('"\\e922"');
 $icon-google-plus-sq: unquote('"\\ea8c"');
 $icon-google-plus-circle: unquote('"\\ea8d"');
 $icon-google-drive: unquote('"\\ea8f"');
 $icon-telegram: unquote('"\\ea95"');
 $icon-youtube: unquote('"\\ea9d"');
 $icon-git-hub-circle: unquote('"\\e921"');
-$icon-git-hub-square: unquote('"\\e922"');
 $icon-fire-flame: unquote('"\\e9aa"');
-$icon-linked-in: unquote('"\\eaca"');
-$icon-linkedin-sq: unquote('"\\eac9"');
+$icon-instagram: unquote('"\\eaca"');
+$icon-instagram-square: unquote('"\\eac9"');
 $icon-wikipedia1: unquote('"\\eac8"');
 $icon-youtube-lg: unquote('"\\ea9e"');
 $icon-vk: unquote('"\\ea98"');
@@ -136,7 +141,7 @@ $icon-jet-brains: unquote('"\\e923"');
 $icon-twitter: unquote('"\\ea96"');
 $icon-safari1: unquote('"\\eadd"');
 $icon-google-circle: unquote('"\\ea8a"');
-$icon-google-sq: unquote('"\\ea89"');
+$icon-google-squard: unquote('"\\ea89"');
 $icon-google: unquote('"\\ea88"');
 $icon-git-hub: unquote('"\\eaeb"');
 $icon-wikipedia: unquote('"\\eacd"');
@@ -144,7 +149,7 @@ $icon-hackernews: unquote('"\\eac7"');
 $icon-reddit: unquote('"\\eac6"');
 $icon-skype: unquote('"\\eac5"');
 $icon-soundcloud-square: unquote('"\\eac4"');
-$icon-soundcloud: unquote('"\\eac3"');
+$icon-sound-cloud: unquote('"\\eac3"');
 $icon-windows: unquote('"\\eac1"');
 $icon-android: unquote('"\\eac0"');
 $icon-finder: unquote('"\\eabf"');
@@ -262,7 +267,7 @@ $icon-up-load: unquote('"\\e9c8"');
 $icon-bookmark: unquote('"\\e9d2"');
 $icon-bookmarks: unquote('"\\e9d3"');
 $icon-tags-black: unquote('"\\e90a"');
-$icon-tags: unquote('"\\e909"');
+$icon-tags: unquote('"\\e90b"');
 $icon-price-tag: unquote('"\\e935"');
 $icon-price-tags: unquote('"\\e936"');
 $icon-image: unquote('"\\e90d"');
@@ -283,8 +288,8 @@ $icon-calendar: unquote('"\\e939"');
 $icon-warning: unquote('"\\ea35"');
 $icon-notification: unquote('"\\ea36"');
 $icon-information: unquote('"\\ea3a"');
-$icon-droplet: unquote('"\\e90b"');
-$icon-zoom-in: unquote('"\\e987"');
+$icon-droplet: unquote('"\\e910"');
+$icon-zoom-in: unquote('"\\e988"');
 $icon-contrast: unquote('"\\e9d5"');
 $icon-search: unquote('"\\e92e"');
 $icon-clipboard: unquote('"\\e9b8"');
@@ -308,19 +313,19 @@ $icon-cancel: unquote('"\\ea3d"');
 $icon-check-mark-d: unquote('"\\ea3e"');
 $icon-check-mark: unquote('"\\ea3f"');
 $icon-spell-check: unquote('"\\ea40"');
-$icon-quotes-left: unquote('"\\e977"');
-$icon-quotes-right: unquote('"\\e978"');
-$icon-zoom-out: unquote('"\\e988"');
-$icon-en-large: unquote('"\\e989"');
-$icon-en-small: unquote('"\\e98a"');
+$icon-quotes-left: unquote('"\\e989"');
+$icon-quotes-right: unquote('"\\e98a"');
+$icon-zoom-out: unquote('"\\e98d"');
+$icon-en-large: unquote('"\\e98e"');
+$icon-en-small: unquote('"\\e991"');
 $icon-paragraph-left: unquote('"\\ea77"');
 $icon-paragraph-center: unquote('"\\ea78"');
 $icon-paragraph-right: unquote('"\\ea79"');
 $icon-paragraph-justify: unquote('"\\ea7a"');
 $icon-indent-increase: unquote('"\\ea7b"');
 $icon-indent-decrease: unquote('"\\ea7c"');
-$icon-video: unquote('"\\e913"');
-$icon-head-phones: unquote('"\\e910"');
+$icon-video: unquote('"\\e92d"');
+$icon-head-phones: unquote('"\\e913"');
 $icon-connection-wifi: unquote('"\\e91b"');
 $icon-podcast: unquote('"\\e91c"');
 $icon-feed-wave: unquote('"\\e91d"');
@@ -336,7 +341,7 @@ $icon-forward: unquote('"\\ea1b"');
 $icon-repeat: unquote('"\\ea2e"');
 $icon-infinite: unquote('"\\ea2f"');
 $icon-shuffle-random: unquote('"\\ea30"');
-$icon-equalizer: unquote('"\\e993"');
+$icon-equalizer: unquote('"\\e99f"');
 $icon-play-o: unquote('"\\ea1c"');
 $icon-pause-o: unquote('"\\ea1d"');
 $icon-stop-o: unquote('"\\ea1e"');
@@ -365,28 +370,25 @@ $icon-arrow-outline-right: unquote('"\\e929"');
 $icon-arrow-outline-up: unquote('"\\e92a"');
 $icon-arrow-down-o: unquote('"\\e92b"');
 $icon-arrow-leftc-o: unquote('"\\e92c"');
-$icon-arrow-thin-down: unquote('"\\e92d"');
-$icon-arrow-thin-left: unquote('"\\e93b"');
 $icon-arrow-thin-right: unquote('"\\e950"');
-$icon-arrow-thin-up: unquote('"\\e95a"');
-$icon-arrow-up-o: unquote('"\\e95b"');
-$icon-refresh: unquote('"\\e95c"');
-$icon-reload: unquote('"\\e95d"');
-$icon-reply: unquote('"\\e95e"');
-$icon-reply-all: unquote('"\\e95f"');
-$icon-subdirectory-left: unquote('"\\e960"');
-$icon-subdirectory-right: unquote('"\\e961"');
-$icon-location-current: unquote('"\\e962"');
-$icon-pin: unquote('"\\e963"');
-$icon-color-palette: unquote('"\\e964"');
-$icon-badge: unquote('"\\e965"');
-$icon-battery-full: unquote('"\\e966"');
-$icon-battery-half: unquote('"\\e969"');
-$icon-battery-low: unquote('"\\e96a"');
-$icon-save-disk: unquote('"\\e986"');
-$icon-anchor: unquote('"\\e98d"');
-$icon-zoom-in-o: unquote('"\\e98e"');
-$icon-announcement: unquote('"\\e991"');
+$icon-arrow-up-o: unquote('"\\e95f"');
+$icon-refresh: unquote('"\\e960"');
+$icon-reload: unquote('"\\e961"');
+$icon-reply: unquote('"\\e962"');
+$icon-reply-all: unquote('"\\e963"');
+$icon-subdirectory-left: unquote('"\\e964"');
+$icon-subdirectory-right: unquote('"\\e965"');
+$icon-location-current: unquote('"\\e966"');
+$icon-pin: unquote('"\\e969"');
+$icon-color-palette: unquote('"\\e96a"');
+$icon-badge: unquote('"\\e977"');
+$icon-battery-full: unquote('"\\e978"');
+$icon-battery-half: unquote('"\\e986"');
+$icon-battery-low: unquote('"\\e987"');
+$icon-save-disk: unquote('"\\e99e"');
+$icon-anchor: unquote('"\\e99d"');
+$icon-zoom-in-o: unquote('"\\e99c"');
+$icon-announcement: unquote('"\\e993"');
 $icon-view-hide: unquote('"\\e992"');
 $icon-view-show: unquote('"\\e996"');
 $icon-zoom-out-o: unquote('"\\e997"');
