--- a/#src/pug/partials/swiper.pug
+++ b/#src/pug/partials/swiper.pug
@@ -3,7 +3,7 @@
     ._slide()
       .content-mainslide._content
         ._invisible 
-          a(href="#")._link 
+          a(href="https://dennchik.github.io/CreativeCult/build/")._link 
         ._image
           img(src="@@webRoot/img/main/screen-4.png" alt="image") 
     ._slide
@@ -27,24 +27,24 @@
     ._slide
       .content-mainslide._content
         ._invisible 
-          a(href="#")._link 
+          a(href="https://dennchik.github.io/CreativeCult/build/")._link 
         ._image
-          img(src="@@webRoot/img/main/screen-4.png" alt="image") 
+          img(src="@@webRoot/img/main/screen-4.jpg" alt="image") 
     ._slide
       .content-mainslide._content
         ._invisible 
           a(href="https://dennchik.github.io/Relvise/build/")._link 
         ._image
-          img(src="@@webRoot/img/main/screen-3.png" alt="image") 
+          img(src="@@webRoot/img/main/screen-5.png" alt="image") 
     ._slide
       .content-mainslide._content
         ._invisible 
           a(href="https://dennchik.github.io/coronaWebsite/build/")._link  
         ._image
-          img(src="@@webRoot/img/main/screen-2.png" alt="image") 
+          img(src="@@webRoot/img/main/screen-3.png" alt="image") 
     ._slide
       .content-mainslide._content
         ._invisible 
           a(href="https://dennchik.github.io/Clear-fit/public/")._link 
         ._image
-          img(src="@@webRoot/img/main/screen-1.png" alt="image") 
+          img(src="@@webRoot/img/main/screen-2.png" alt="image") 
