--- a/#src/pug/partials/section-scills.pug
+++ b/#src/pug/partials/section-scills.pug
@@ -27,7 +27,11 @@
 			h1._title UI\UX Design 
 			p Photoshop, Illustrator, Figma, GitHub, Versal, Marsy.
 			h1._title Опыт (Experience):
-			p Я сотрудничаю со стартапами, организациями и компаниями из списка Fortune 500 в создании цифровых продуктов, которые помогают клиентам преодолевать трудности и создавать прочные связи с миллионами людей каждый день. 
+			p Как только увидел первую web-страницу, с момента появления Интернета. 
+			p Всю свою жизнь я руководствовался твердой верой в то, что образование важно. Я стараюсь узнавать что-то новое каждый божий день.
+			p Рассматриваю проблемы как вызов и люблю находить креативные, но в то же время подходящие решения. Я способен находить собственные решения, но также хорошо работает в группе. 
+			p Хорошо выполняет большинство заданий и имеет привычку проверять результаты работы.  Всегда добиваюсь совершенства.
+			p Работая в жестком, но реалистичном режиме, я всегда выполняет задачи на высоком уровне. Внимательность и точность даже в условиях нехватки времени. Готов работать все дополнительные часы, необходимые для соблюдения сроков.
 	._column 
 		._row
 			._header
