--- a/#src/scss/section/section-scills.scss
+++ b/#src/scss/section/section-scills.scss
@@ -86,6 +86,11 @@
 		@include _320 {
 			max-width: 28rem;
 		}
+		&:nth-child(2) {
+			p {
+				text-indent: 3rem;
+			}
+		}
 	}
 
 	// .scills-page__header
