--- a/#src/pug/partials/section-project.pug
+++ b/#src/pug/partials/section-project.pug
@@ -91,7 +91,7 @@
 						+iconfont("pug")
 						+iconfont("gulp")
 				._text 
-					| Веб-сайт финансовой организации,Сайт интернет магазина “шаблон”
+					| Веб-сайт финансовой организации
 				._button 
 					a(href="https://dennchik.github.io/Clear-fit/public/" target="_blank") view-project 
 			.languages
