--- a/#src/pug/partials/section-modal.pug
+++ b/#src/pug/partials/section-modal.pug
@@ -6,5 +6,5 @@
 	._buttons 
 		._button._visit-btn 
 			a(target="_blank" href="")._link VISIT WEBSITE
-		._button._close BACK TO PAGE 
+		._button._close-modal BACK TO PAGE 
 
