--- a/#src/scss/section/section-project.scss
+++ b/#src/scss/section/section-project.scss
@@ -40,6 +40,9 @@
 		max-width: 400px;
 		display: flex;
 		flex-direction: column;
+		border-radius: 10px;
+		overflow: hidden;
+		transition: box-shadow 0.5s ease 0s;
 		&:hover {
 			box-shadow: 0px 1px 7px $boxShadowSecond;
 			.card-project__image {
@@ -68,8 +71,6 @@
 		max-width: 400px;
 		display: flex;
 		flex-direction: column;
-		border-radius: 10px 10px 0 0;
-		overflow: hidden;
 		transition: box-shadow 0.5s ease-in-out;
 		background: var(--background-side-bar);
 	}
@@ -161,7 +162,6 @@
 
 .languages {
 	padding: 0.5rem 1.6rem 1.6rem;
-	border-radius: 0 0 10px 10px;
 	display: flex;
 	height: 30%;
 	flex-direction: column;
@@ -182,7 +182,7 @@
 	&__title {
 		display: table-row;
 		color: var(--font-color-second);
-		font-size: 1.6rem;
+		font-size: 1.4rem;
 		line-height: 200%;
 	}
 
