--- a/#src/pug/partials/section-hello.pug
+++ b/#src/pug/partials/section-hello.pug
@@ -47,10 +47,10 @@
 				._title.
 					Я > Front-end разработчик
 			._text 
-				p /* В данный момент я являюсь частным предпринимателем, но хотел бы кардинально изменить свой род деятельности. */
-				p /* С момента появления 
-					span Интернета 
-					| я занимаюсь версткой на уровне сильного увлечения. Я хочу взять на себя больше работы и повысить свои навыки веб-разработчика. */
+				p /* В данный момент я являюсь частным предпринимателем, но стремлюсь к радикальным изменениям в моей профессиональной сфере. В тот великий день, когда человечество узнало о существовании 
+					span "ИНТЕРНЕТА" 
+					| , я стал увлекаться версткой и считаю себя опытным верстальщиком. Теперь я хочу расширить свои горизонты и стать веб-разработчиком более высокого уровня. Моя цель - взять на себя более сложные проекты, глубже погрузиться в мир неизведанного и постоянно совершенствовать свои навыки в этой области */
+				p /* Моя страсть к верстке привела меня к решению переключиться на полноценную веб-разработку. Готов вложить все усилия в изучение новых технологий и методов, чтобы стать востребованным специалистом в этой динамичной области. Мое стремление к профессиональному росту и готовность к принятию вызовов делают меня идеальным кандидатом для новых проектов и задач в сфере IT. */
 
 			._footer
 				._link 
